# fpt-stock-forecasting

./: README.md  main.py  pyproject.toml
.github/workflows/: daily_crawl.yml  monthly_retrain.yml  weekly_evaluate.yml
app/: streamlit_app.py
artifacts/raw_fpt_only_residual_cnnlstm_transformer/: best_autoformer_w3.pt  best_autoformer_w30.pt  best_autoformer_w5.pt  best_autoformer_w7.pt  best_cnn1d_lstm_w3.pt  best_cnn1d_lstm_w30.pt  best_cnn1d_lstm_w5.pt  best_cnn1d_lstm_w7.pt  best_informer_w3.pt  best_informer_w30.pt  best_informer_w5.pt  best_informer_w7.pt  best_lstm_w3.pt  best_lstm_w30.pt  best_lstm_w5.pt  best_lstm_w7.pt  best_model_meta.json  best_transformer_w3.pt  best_transformer_w30.pt  best_transformer_w5.pt  best_transformer_w7.pt  evaluation_metadata.json  experiment_config.json  feature_columns.json  feature_scaler.pkl  histories.json  metrics_all_windows_dev_test.json  report.md  target_scaler.pkl  weekly_evaluation.csv  weekly_predictions.csv
artifacts/raw_fpt_only_residual_cnnlstm_transformer/output/: evaluation_history.csv  evaluation_metadata.json  report.md  weekly_evaluation.csv  (+1 more)
data/processed/: merged_dataset.csv
data/raw/: fpt_stock_price.csv  vnindex_price.csv
data_pipeline/: base.py  build_dataset.py  crawl_fpt.py  crawl_vnindex.py  daily_crawl.py
notebooks/: data_eda_visualize.ipynb  fpt_stock_merged_dataset_residual_cnnlstm_transformer.ipynb  fpt_stock_raw_fpt_residual_cnnlstm_transformer.ipynb
training/: config.py  data.py  evaluate.py  metrics.py  models.py  predict.py  report.py  retrain.py  train.py  utils.py
