[project]
name = "fpt-stock-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.68.1",
    "vnstock>=4.0.2",
    "streamlit>=1.58.0",
    "torch",
    "scikit-learn>=1.9.0",
]
